pkg/ibmvpc/examples/out/explain_out/VsiToVsi4_all_vpcs_explain_debug.txt
Connectivity explanation between 10.240.10.4 (vsi1-ky[10.240.10.4]) and 10.240.20.4 (vsi2-ky[10.240.20.4]) within test-vpc1-ky
==============================================================================================================================

No connection between vsi1-ky[10.240.10.4] and vsi2-ky[10.240.20.4]; connection blocked by egress
Egress: security group sg1-ky blocks connection; network ACL acl1-ky allows connection
Ingress: network ACL acl2-ky allows connection; security group sg2-ky allows connection

Details:
~~~~~~~~
Egress:
security group sg1-ky blocks connection since there are no relevant allow rules
network ACL acl1-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

Ingress:
network ACL acl2-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg2-ky allows connection with the following allow rules
	index: 4, direction: inbound, protocol: all, cidr: 10.240.10.4/32
------------------------------------------------------------------------------------------------------------------------
